--- a/app/src/main/res/layout/fragment_charge_creation.xml
+++ b/app/src/main/res/layout/fragment_charge_creation.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/amount_tv"
+        app:layout_constraintBottom_toTopOf="@id/amount_et"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_chainStyle="packed"/>
@@ -19,7 +19,7 @@
         android:id="@+id/amount_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/product_tv"
+        app:layout_constraintTop_toBottomOf="@id/product_et"
         app:layout_constraintBottom_toTopOf="@id/pay_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,8 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CHARGE"
-        app:layout_constraintTop_toBottomOf="@id/amount_tv"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/amount_et"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_chainStyle="packed"/>
